deployments/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.local.tigovanroy.space`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: local-tigovanroy-space-production-tls
